# tcp_client

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  config.h  http_client.c  http_client.h  main.c  sensor_service.c  sensor_service.h  wifi_manager.c  wifi_manager.h
